# Tempo

./: .gitignore  API_GUIDE.md  ARCHITECTURE.md  CONTRIBUTION.md  CONTRIBUTION_OLD.md  Changelog.md  DESIGN_PHILOSOPHY.md  LICENSE  NewSuggest.md  PRIVACY.md  PRIVACY_POLICY.md  README.md  TempoStrategy.md  build.gradle.kts  build_output.txt  desktopplan.md  gradle.properties  implementation_plan_anti_gaming.md  settings.gradle.kts  task.md  userflow.md
MOCKUP/: artist_details.html  history.html  home.html  song-details.html  spotlight.html  stats.html
SpotlightStoryMockup/: Conclusion.html  Genre.html  ListeningMinutes.html  Personality.html  TopArtist.html  TopSong.html
WidgetMockup/: 1 (1).txt  1 (2).txt  1.txt  widget1.html  widget2.html  widget3.html  widget4.html  widget5.html  widget6.html
app/: build.gradle.kts  proguard-rules.pro
browser-extension/: PRIVACY.md  README.md  (+5 more)
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: battery.rs  errors.rs  lib.rs  main.rs  session.rs
desktop/src-tauri/src/commands/: export.rs  mod.rs  pairing.rs  plays.rs  queue.rs  settings.rs  stats.rs  sync.rs  update.rs  user_lists.rs
desktop/src-tauri/src/db/: mod.rs  models.rs
desktop/src-tauri/src/media/: artist_parser.rs  linux.rs  macos.rs  media_remote.rs  mod.rs  normalize.rs  site_detect.rs  tracker.rs  windows_media.rs
desktop/src-tauri/src/network/: discovery.rs  mdns.rs  mod.rs  subnet.rs  wifi.rs
desktop/src-tauri/src/queue/: mod.rs
(+338 files in other folders)
