[package]
name = "tempo-desktop"
version = "1.0.0"
description = "Tempo Desktop Satellite"
authors = ["Tempo"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tempo_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
hostname = "0.4"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
thiserror = "1"
mdns-sd = "0.11"
once_cell = "1"
regex = "1"
csv = "1.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.10"
block = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Media_Control",
  "Foundation",
  "Storage_Streams"
] }
